--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
 <div id="main">
-  <fmt-intro></fmt-intro>
+  <fmt-intro [scrollPosition]="scrollPosition"></fmt-intro>
   <fmt-about-me></fmt-about-me>
 </div>
