--- a/src/app/main/components/intro/intro.component.scss
+++ b/src/app/main/components/intro/intro.component.scss
@@ -1,25 +1,39 @@
+@import '/src/styles/variables.scss';
+
 #intro {
-  background: linear-gradient(325deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.2) 50%, rgba(255,255,255,1) 100%);
+  background: url('/assets/images/intro-bg.jpg') no-repeat fixed;
+  background-size: cover;
+  position: relative;
   width: 100%;
   height: 100vh;
 
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(325deg, rgba($color-main, 0.3) 0%, rgba($color-dark, 0.5) 75%, rgba($color-light, 0.8) 100%);
+  }
+
   .intro-info {
     font-family: 'Caveat', cursive;
+    color: $color-light;
+    z-index: 2;
 
     .first-name {
       font-size: 3vw;
-      animation-duration: 1s;
     }
 
     .last-name {
       font-size: 4vw;
-      animation-duration: 2s;
     }
 
     .job-title {
       font-size: 4vw;
       font-family: 'Orbitron', sans-serif;
-      animation-duration: 3s;
+      // color: $color-secondary;
     }
 
     .first-name,
@@ -27,37 +41,13 @@
     .job-title {
       font-weight: bold;
       white-space: nowrap;
-      animation-name: fade-from-right;
-      animation-timing-function: ease-in;
     }
   }
 
   .intro-logo {
+    z-index: 2;
     width: 50%;
     height: auto;
-    animation: logo-animation 1s linear;
-    border: 3px solid rgba(255,255,255,0.7);
-  }
-}
-
-@keyframes fade-from-right {
-  from {
-    opacity: 0;
-    transform: translateX(100px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes logo-animation {
-  from {
-    opacity: 0;
-    transform: scale(0.1);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
+    border: 3px solid rgba(255,255,255,0.3);
   }
 }
