--- a/src/app/main/components/about-me/about-me.component.html
+++ b/src/app/main/components/about-me/about-me.component.html
@@ -1,3 +1,3 @@
-<div id="about-me" class="flex-center">
-  ABOUT ME SECTION
+<div #aboutMe id="about-me" class="flex-center">
+  <h1 *ngIf="showContent">Hello, my name is Fernan Marco.</h1>
 </div>
