--- a/src/app/main/components/menu/menu.component.scss
+++ b/src/app/main/components/menu/menu.component.scss
@@ -1,144 +1,89 @@
 @import '/src/styles/variables.scss';
 
-$typeSpeed: 3s;
-$typeWordCount: 25;
-$blinkSpeed: 0.5s;
-$wordDelay: calc($typeSpeed + 1s);
 $menuMarginSizeX: calc(1rem + 3vw);
 $menuMarginSizeY: calc(1rem + 1.5vw);
+
+:host {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+}
 
 #menu {
   width: 100%;
   height: 100%;
-  font-family: "Cutive Mono", monospace;
   position: relative;
 
-  h1.introduction {
-    width: max-content;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: calc(1rem + 4vw);
-    transform: translate(-50%, -50%);
-    animation: fadeOut 1s ease $wordDelay forwards;
+  .title {
+    h1 {
+      font-family: "Cutive Mono", monospace;
+      font-size: calc(1rem + 1.5vw);
+    }
+  }
 
-    &::after,
-    &::before {
-      content: "";
+  .menu-items {
+    font-family: 'Caveat', cursive;
+
+    button.link {
+      color: $color-dark;
+      line-height: 1.2;
+      font-weight: 400;
+      text-decoration: none;
+      font-size: calc(1rem + 1vw);
+      padding: calc(1rem + 1vw);
       position: absolute;
+      border: 1px solid $color-dark;
+      border-radius: 100%;
+      background-color: #fff;
+      transition: all 0.5s ease-in-out;
+
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+        transform: scale(1.2);
+      }
+    }
+
+    button.myself {
       top: 0;
+      left: 0;
+      margin-top: $menuMarginSizeY;
+      margin-left: $menuMarginSizeX;
+    }
+
+    button.education {
       bottom: 0;
       left: 0;
+      margin-bottom: $menuMarginSizeY;
+      margin-left: $menuMarginSizeX;
+    }
+
+    button.skills {
+      top: 0;
       right: 0;
+      margin-top: $menuMarginSizeY;
+      margin-right: $menuMarginSizeX;
     }
 
-    &::before {
-      background: white;
-      animation: type $typeSpeed steps($typeWordCount) forwards;
+    button.experience {
+      bottom: 0;
+      right: 0;
+      margin-bottom: $menuMarginSizeY;
+      margin-right: $menuMarginSizeX;
     }
 
-    &::after {
-      width: 0.05em;
-      background: black;
-      animation: type $typeSpeed steps($typeWordCount) forwards, blink $blinkSpeed steps($typeWordCount) infinite;
-    }
-  }
+    button.contact {
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
+      margin-bottom: $menuMarginSizeY;
 
-  .menu-content {
-    opacity: 0;
-    animation: fadeIn 1s ease calc($wordDelay + 1s) forwards;
-
-    .title {
-      h1 {
-        font-size: calc(1rem + 1.5vw);
+      &:hover {
+        transform: translate(-50%, 0) scale(1.2);
       }
-    }
-
-    .menu-items {
-      font-family: 'Caveat', cursive;
-
-      button.link {
-        font-size: calc(1rem + 1vw);
-        color: $color-dark;
-        position: absolute;
-        text-decoration: none;
-        padding: calc(1rem + 1vw);
-        border-radius: 100%;
-        border: 1px solid black;
-        line-height: 1.2;
-        font-weight: 400;
-        transition: all 0.5s ease-in-out;
-
-        &:hover {
-          text-decoration: underline;
-          // border-bottom: 3px solid $color-dark;
-          cursor: pointer;
-          transform: scale(1.2);
-        }
-      }
-
-      button.myself {
-        top: 0;
-        left: 0;
-        margin-top: $menuMarginSizeY;
-        margin-left: $menuMarginSizeX;
-      }
-
-      button.education {
-        bottom: 0;
-        left: 0;
-        margin-bottom: $menuMarginSizeY;
-        margin-left: $menuMarginSizeX;
-      }
-
-      button.skills {
-        top: 0;
-        right: 0;
-        margin-top: $menuMarginSizeY;
-        margin-right: $menuMarginSizeX;
-      }
-
-      button.experience {
-        bottom: 0;
-        right: 0;
-        margin-bottom: $menuMarginSizeY;
-        margin-right: $menuMarginSizeX;
-      }
-
-      button.contact {
-        bottom: 0;
-        left: 50%;
-        transform: translate(-50%, 0);
-        margin-bottom: $menuMarginSizeY;
-
-        &:hover {
-          transform: translate(-50%, 0) scale(1.2);
-        }
-      }
-    }
-  }
-
-  @keyframes type {
-    to {
-      left: 100%;
-    }
-  }
-
-  @keyframes blink {
-    to {
-      background: transparent;
-    }
-  }
-
-  @keyframes fadeIn {
-    to {
-      opacity: 1;
-    }
-  }
-
-  @keyframes fadeOut {
-    to {
-      opacity: 0;
     }
   }
 }
