--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,4 +1,76 @@
-#content {
+@import '/src/styles/variables.scss';
+
+$typeSpeed: 3s;
+$typeWordCount: 25;
+$blinkSpeed: 0.5s;
+$wordDelay: calc($typeSpeed + 1s);
+
+#container {
   width: 100%;
   height: 100vh;
+  font-family: "Cutive Mono", monospace;
+  position: relative;
+
+  h1.introduction {
+    width: max-content;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: calc(1rem + 4vw);
+    transform: translate(-50%, -50%);
+    animation: fadeOut 1s ease $wordDelay forwards;
+
+    &::after,
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+
+    &::before {
+      background: white;
+      animation: type $typeSpeed steps($typeWordCount) forwards;
+    }
+
+    &::after {
+      width: 0.05em;
+      background: black;
+      animation: type $typeSpeed steps($typeWordCount) forwards, blink $blinkSpeed steps($typeWordCount) infinite;
+    }
+  }
+
+  .content {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    animation: fadeIn 1s ease calc($wordDelay + 1s) forwards;
+    position: relative;
+  }
+
+  @keyframes type {
+    to {
+      left: 100%;
+    }
+  }
+
+  @keyframes blink {
+    to {
+      background: transparent;
+    }
+  }
+
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeOut {
+    to {
+      opacity: 0;
+    }
+  }
 }
