--- a/src/app/main/components/about-me/about-me.component.scss
+++ b/src/app/main/components/about-me/about-me.component.scss
@@ -1,3 +1,7 @@
+@import '/src/styles/variables.scss';
+
+$slideSpeed: 3s;
+
 :host {
   top: 0;
   left: 0;
@@ -9,6 +13,92 @@
 
 #about-me {
   width: 100%;
-  height: 200vh;
-  background: red;
+  // height: 800vh;
+  position: relative;
+  font-family: 'Caveat', cursive;
+
+  button {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    margin-right: 1rem;
+  }
+
+  .content {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: calc(1rem + 2vw);
+
+    .title {
+      height: 20%;
+    }
+    .timeline {
+      height: 80%;
+
+      .tracker {
+        width: 10%;
+        height: 100%;
+        position: relative;
+
+        .cover {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          background: white;
+          z-index: 2;
+        }
+
+        .line {
+          height: 100%;
+          width: calc(0.5rem + 0.5vw);
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          flex-direction: column;
+          background-color: $color-dark;
+          position: relative;
+          border-radius: 100%;
+
+          .point {
+            width: calc(1rem + 2vw);
+            height: calc(1rem + 2vw);
+            background-color: $color-dark;
+            border-radius: 100%;
+          }
+        }
+
+      }
+
+      .details {
+        width: 90%;
+        padding: calc(1rem + 2vw);
+      }
+    }
+  }
+
+  h1 {
+    position: relative;
+    font-size: calc(1rem + 4vw);
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: white;
+      animation: slide $slideSpeed forwards;
+    }
+  }
+
+  @keyframes slide {
+    to { left: 100% }
+  }
 }
