--- a/src/app/main/components/intro/intro.component.html
+++ b/src/app/main/components/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div id="intro" class="flex-center" [ngStyle]="{'background-position.px': '0 ' + parallaxBG}">
+<div #intro id="intro" class="flex-center" [ngStyle]="{'background-position.px': '0 ' + parallaxBG}">
   <div class="overlay"></div>
   <div class="col-6 flex-center">
     <div class="intro-info" @introInfoAnimation>
