--- a/src/app/main/components/about-me/about-me.component.scss
+++ b/src/app/main/components/about-me/about-me.component.scss
@@ -68,8 +68,21 @@ $slideSpeed: 3s;
           .point {
             width: calc(1rem + 2vw);
             height: calc(1rem + 2vw);
+            padding: calc(1rem + 1vw);
+            font-size: calc(1rem + 0.5vw);
+            font-family: "Cutive Mono", monospace;
+            color: $color-dark;
             background-color: $color-dark;
             border-radius: 100%;
+            z-index: 2;
+            transition: all 0.5s ease-in-out;
+
+            &.active {
+              font-weight: bold;
+              background: #fff;
+              transform: scale(1.5);
+              border: 5px solid $color-dark;
+            }
           }
         }
 
@@ -77,7 +90,9 @@ $slideSpeed: 3s;
 
       .details {
         width: 90%;
+        height: 100%;
         padding: calc(1rem + 2vw);
+        border: 1px solid $color-dark;
       }
     }
   }
