--- a/src/app/main/components/contact-me/contact-me.component.html
+++ b/src/app/main/components/contact-me/contact-me.component.html
@@ -1,3 +1,3 @@
-<div id="contact-me">
-  <button class="btn btn-primary" (click)="backToMenu()">Back</button>
+<div #contactMe id="contact-me">
+  <button class="btn btn-primary" (click)="backToMenu(contactMe)">Back</button>
 </div>
