--- a/src/app/main/components/education/education.component.html
+++ b/src/app/main/components/education/education.component.html
@@ -1,3 +1,3 @@
-<div id="education">
-  <button class="btn btn-primary" (click)="backToMenu()">Back</button>
+<div #education id="education">
+  <button class="btn btn-primary" (click)="backToMenu(education)">Back</button>
 </div>
