--- a/src/app/main/components/experiences/experiences.component.html
+++ b/src/app/main/components/experiences/experiences.component.html
@@ -1,3 +1,3 @@
-<div id="experiences">
-  <button class="btn btn-primary" (click)="backToMenu()">Back</button>
+<div #experiences id="experiences">
+  <button class="btn btn-primary" (click)="backToMenu(experiences)">Back</button>
 </div>
