--- a/src/app/main/components/skills/skills.component.html
+++ b/src/app/main/components/skills/skills.component.html
@@ -1,3 +1,3 @@
-<div id="skills">
-  <button class="btn btn-primary" (click)="backToMenu()">Back</button>
+<div #skills id="skills">
+  <button class="btn btn-primary" (click)="backToMenu(skills)">Back</button>
 </div>
