--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,15 @@
 
 body {
   font-family: 'Lora', serif;
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .flex-center {
